# blog_nre

./: .flake8  .gitignore  README.md  conftest.py  pyproject.toml
app/articles/: admin.py  client.py  index.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/articles/migrations/: 0001_initial.py  0002_author_alter_article_author.py  0003_category_rename_content_article_description_and_more.py  0004_alter_article_author_delete_author.py  0005_alter_article_category.py  0006_alter_article_category.py  0007_rating.py  0008_article_view_count.py
app/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_alter_user_birth_date.py  0003_alter_user_phone.py
config/: asgi.py  celery.py  wsgi.py
config/settings/: base.py  local.py
routes/: urls.py
test/: test_endpoints.py
